<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="hint_hex_code">Hex: #FFFFFF</string>
    <string name="hint_alpha">Transparency</string>
    <string name="_3d">3D</string>
    <string name="reset">Reset</string>
    <string name="color">Color</string>
</resources>